Layout bugfix

--- a/styles/cart.scss
+++ b/styles/cart.scss
@@ -17,3 +17,61 @@
     padding: 1.5rem 1rem;
     position: relative;
   }
+
+  .cart-heading {
+    display: flex;
+    align-items: center;
+    font-size: 18px;
+    font-weight: 500;
+    cursor: pointer;
+    gap: 2px;
+    margin-left: 10px;
+    border: none;
+    background-color: transparent;
+  }
+  
+  .cart-heading .heading {
+    margin-left: 10px;
+  }
+  
+  .cart-num-items {
+    margin-left: 10px;
+    color: #f02d34;
+  }
+  
+  .empty-cart {
+    margin: 40px;
+    text-align: center;
+  }
+  
+  .empty-cart h3 {
+    font-weight: 600;
+    font-size: 20px;
+  }
+
+  .cart-bottom {
+    position: absolute;
+    bottom: 12px;
+    right: 5px;
+    width: 100%;
+    padding: 30px 65px;
+  }
+
+  .buttons .add-to-cart {
+    padding: 10px 20px;
+    border: 1px solid #f02d34;
+    margin-top: 40px;
+    font-size: 18px;
+    font-weight: 500;
+    background-color: white;
+    color: #f02d34;
+    cursor: pointer;
+    width: 200px;
+    transform: scale(1, 1);
+    transition: transform 0.5s ease;
+  }
+  
+  .buttons .add-to-cart:hover {
+    transform: scale(1.1, 1.1);
+  }
+  
