--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -247,37 +247,6 @@ h2 {
   gap: 10px;
 }
 
-.cart-heading {
-  display: flex;
-  align-items: center;
-  font-size: 18px;
-  font-weight: 500;
-  cursor: pointer;
-  gap: 2px;
-  margin-left: 10px;
-  border: none;
-  background-color: transparent;
-}
-
-.cart-heading .heading {
-  margin-left: 10px;
-}
-
-.cart-num-items {
-  margin-left: 10px;
-  color: #f02d34;
-}
-
-.empty-cart {
-  margin: 40px;
-  text-align: center;
-}
-
-.empty-cart h3 {
-  font-weight: 600;
-  font-size: 20px;
-}
-
 .cancel {
   cursor: pointer;
 }
@@ -293,14 +262,6 @@ h2 {
   display: flex;
   gap: 30px;
   padding: 20px;
-}
-
-.product .cart-product-image {
-  width: 150px;
-  height: 180px;
-  border-radius: 15px;
-  background-color: #ebebeb;
-  object-fit: cover;
 }
 
 .item-desc .flex {
@@ -337,14 +298,6 @@ h2 {
   cursor: pointer;
   background: transparent;
   border: none;
-}
-
-.cart-bottom {
-  position: absolute;
-  bottom: 12px;
-  right: 5px;
-  width: 100%;
-  padding: 30px 65px;
 }
 
 .btn-container {
@@ -467,25 +420,6 @@ h2 {
   display: flex;
   gap: 30px;
 }
-
-.buttons .add-to-cart {
-  padding: 10px 20px;
-  border: 1px solid #f02d34;
-  margin-top: 40px;
-  font-size: 18px;
-  font-weight: 500;
-  background-color: white;
-  color: #f02d34;
-  cursor: pointer;
-  width: 200px;
-  transform: scale(1, 1);
-  transition: transform 0.5s ease;
-}
-
-.buttons .add-to-cart:hover {
-  transform: scale(1.1, 1.1);
-}
-
 .buttons .buy-now {
   width: 200px;
 
